--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 </div>
                 <div class="modal-body">
                     <!-- Login Form -->
-                    <form id="loginForm" autocomplete="false"  class="d-none">
+                    <form id="loginForm" autocomplete="false">
                         <div class="form-group">
                             <label for="lUsername">Username</label>
                             <input type="text" name="lUsername" id="lUsername" class="form-control">
@@ -139,7 +139,7 @@
                         </div>
                     </form>
                     <!-- Register Form  -->
-                    <form id="registerForm" autocomplete="false">
+                    <form id="registerForm" autocomplete="false" class="d-none">
                         <div class="form-group">
                             <label for="rUsername">Username</label>
                             <input type="text" name="rUsername" id="rUsername" class="form-control">
