added autofill off for password fields

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
                         </div>
                         <div class="form-group">
                             <label for="lPassword">Password</label>
-                            <input type="password" name="lPassword" id="lPassword" class="form-control">
+                            <input type="password" name="lPassword" id="lPassword" class="form-control" autocomplete="new-password">
                         </div>
                         <div class="form-group">
                             <button type="submit" name="button" class="btn btn-primary btn-block">Login</button>
@@ -150,7 +150,7 @@
                         </div>
                         <div class="form-group">
                             <label for="rPassword">Password</label>
-                            <input type="password" name="rPassword" id="rPassword" class="form-control">
+                            <input type="password" name="rPassword" id="rPassword" class="form-control" autocomplete="new-password">
                         </div>
                         <div class="form-group">
                             <label for="rConfirmPassword">Confirm Password</label>
