--- a/index.html
+++ b/index.html
@@ -77,11 +77,11 @@
                 <form id="addProduct">
                     <div class="form-group">
                         <label for="productName">Product Name</label>
-                        <input type="text" name="productName" class="form-control" id="productName">
+                        <input type="text" name="productName" class="form-control validationField" id="productName">
                     </div>
                     <div class="form-group">
                         <label for="productPrice">Product Price</label>
-                        <input type="number" name="productPrice" class="form-control" id="productPrice">
+                        <input type="number" name="productPrice" class="form-control validationField" id="productPrice">
                     </div>
                     <input type="hidden" id="productID">
                     <div class="form-group">
@@ -125,14 +125,14 @@
                 </div>
                 <div class="modal-body">
                     <!-- Login Form -->
-                    <form id="loginForm" class="" action="index.html" method="post" autocomplete="off" >
+                    <form id="loginForm" class="" method="post" autocomplete="off" >
                         <div class="form-group">
-                            <label for="lUsername">Username</label>
-                            <input type="text" name="lUsername" id="lUsername" value="" class="form-control validationField">
+                            <label for="Username">Username</label>
+                            <input type="text" name="Username" id="lUsername" value="" class="form-control validationField">
                         </div>
                         <div class="form-group">
-                            <label for="lPassword">Password</label>
-                            <input type="password" name="lUsername" id="lUsername" value="" class="form-control validationField" autocomplete="new-password">
+                            <label for="Password">Password</label>
+                            <input type="password" name="Password" id="lPassword" value="" class="form-control validationField" autocomplete="new-password">
                         </div>
                         <div class="form-group">
                             <button type="submit" name="button" class="btn btn-primary btn-block">Login</button>
@@ -141,20 +141,20 @@
                     <!-- Register Form  -->
                     <form id="registerForm" autocomplete="off" class="d-none">
                         <div class="form-group">
-                            <label for="rUsername">Username</label>
-                            <input type="text" name="rUsername" id="rUsername" class="form-control">
+                            <label for="Username">Username</label>
+                            <input type="text" name="Username" id="rUsername" class="form-control validationField">
                         </div>
                         <div class="form-group">
-                            <label for="rEmail">Email</label>
-                            <input type="email" name="rEmail" id="rEmail" class="form-control">
+                            <label for="Email">Email</label>
+                            <input type="email" name="Email" id="rEmail" class="form-control validationField">
                         </div>
                         <div class="form-group">
-                            <label for="rPassword">Password</label>
-                            <input type="password" name="rPassword" id="rPassword" class="form-control" autocomplete="new-password">
+                            <label for="Password">Password</label>
+                            <input type="password" name="Password" id="rPassword" class="form-control validationField" autocomplete="new-password">
                         </div>
                         <div class="form-group">
-                            <label for="rConfirmPassword">Confirm Password</label>
-                            <input type="password" name="rConfirmPassword" id="rConfirmPassword" class="form-control">
+                            <label for="ConfirmPassword">Confirm Password</label>
+                            <input type="password" name="ConfirmPassword" id="rConfirmPassword" class="form-control validationField">
                         </div>
                         <div class="form-group">
                             <button type="submit" name="button" class="btn btn-info btn-block">Register</button>
