--- a/index.html
+++ b/index.html
@@ -15,26 +15,6 @@
                 <div class="row">
                     <div class="col-12 py-4 text-white">
                         <h4 class="">Contact Us</h4>
-                        <form class="" action="index.html" method="post">
-                            <div class="form-row">
-                                <div class="col-12 col-sm-6">
-                                    <label for="name">Name</label>
-                                    <input type="text" name="name" value="" class="form-control">
-                                </div>
-                                <div class="col-12 col-sm-6">
-                                    <label for="email">Email</label>
-                                    <input type="email" name="email" value="" class="form-control">
-                                </div>
-                            </div>
-                            <div class="form-group">
-                                <label for="message">Message</label>
-                                <textarea name="message" rows="4" cols="80" class="form-control"></textarea>
-
-                            </div>
-                            <div class="form-group">
-                                <input type="submit" name="" value="Send Enquiry" class="btn btn-light">
-                            </div>
-                        </form>
                     </div>
                 </div>
             </div>
@@ -128,11 +108,11 @@
                     <form id="loginForm" class="" method="post" autocomplete="off" >
                         <div class="form-group">
                             <label for="Username">Username</label>
-                            <input type="text" name="Username" id="lUsername" value="" class="form-control validationField">
+                            <input type="text" name="Username" id="lUsername" class="form-control validationField">
                         </div>
                         <div class="form-group">
                             <label for="Password">Password</label>
-                            <input type="password" name="Password" id="lPassword" value="" class="form-control validationField" autocomplete="new-password">
+                            <input type="password" name="Password" id="lPassword" class="form-control validationField" autocomplete="new-password">
                         </div>
                         <div class="form-group">
                             <button type="submit" name="button" class="btn btn-primary btn-block">Login</button>
