--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
                 <form id="addProduct">
                     <div class="form-group">
                         <label for="productName">Product Name</label>
-                        <input type="text" name="productName" class="form-control validationField" id="productName">
+                        <input type="text" name="productName" class="form-control validationField" id="productName" data-validation="required,min:10">
                     </div>
                     <div class="form-group">
                         <label for="productPrice">Product Price</label>
-                        <input type="number" name="productPrice" class="form-control validationField" id="productPrice">
+                        <input type="text" name="productPrice" class="form-control validationField" id="productPrice" data-validation="required,numeric">
                     </div>
                     <input type="hidden" id="productID">
                     <div class="form-group">
@@ -108,11 +108,11 @@
                     <form id="loginForm" class="" method="post" autocomplete="off" >
                         <div class="form-group">
                             <label for="Username">Username</label>
-                            <input type="text" name="Username" id="lUsername" class="form-control validationField">
+                            <input type="text" name="username" id="lUsername" class="form-control validationField" data-validation="required">
                         </div>
                         <div class="form-group">
                             <label for="Password">Password</label>
-                            <input type="password" name="Password" id="lPassword" class="form-control validationField" autocomplete="new-password">
+                            <input type="password" name="password" id="lPassword" class="form-control validationField" autocomplete="new-password" data-validation="required">
                         </div>
                         <div class="form-group">
                             <button type="submit" name="button" class="btn btn-primary btn-block">Login</button>
@@ -122,19 +122,19 @@
                     <form id="registerForm" autocomplete="off" class="d-none">
                         <div class="form-group">
                             <label for="Username">Username</label>
-                            <input type="text" name="Username" id="rUsername" class="form-control validationField">
+                            <input type="text" name="username" id="rUsername" class="form-control validationField" data-validation="required,min:5,max:20,unique">
                         </div>
                         <div class="form-group">
                             <label for="Email">Email</label>
-                            <input type="email" name="Email" id="rEmail" class="form-control validationField">
+                            <input type="email" name="email" id="rEmail" class="form-control validationField" data-validation="required,unique">
                         </div>
                         <div class="form-group">
                             <label for="Password">Password</label>
-                            <input type="password" name="Password" id="rPassword" class="form-control validationField" autocomplete="new-password">
+                            <input type="password" name="password" id="rPassword" class="form-control validationField" autocomplete="new-password" data-validation="required,min:5,max:20">
                         </div>
                         <div class="form-group">
                             <label for="ConfirmPassword">Confirm Password</label>
-                            <input type="password" name="ConfirmPassword" id="rConfirmPassword" class="form-control validationField">
+                            <input type="password" name="confirmPassword" id="rConfirmPassword" class="form-control validationField" data-validation="required,min:5,max:20,match:rPassword">
                         </div>
                         <div class="form-group">
                             <button type="submit" name="button" class="btn btn-info btn-block">Register</button>
