--- a/index.html
+++ b/index.html
@@ -32,8 +32,11 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <!-- Login & Register Button -->
-                <button type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#authForm">
+                <button id="loginBtn" type="button" class="btn btn-outline-light" data-toggle="modal" data-target="#authForm">
                     Login / Register
+                </button>
+                <button id="logoutBtn" type="button" class="btn btn-outline-light d-none">
+                    Logout
                 </button>
             </div>
         </div>
@@ -46,18 +49,16 @@
                 <h1>Product Library</h1>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
+        <!-- Add Product Button -->
+        <div id="addProductSection" class="row d-none">
+            <div class="col-12">
                 <h3 id="heading">Add New Product</h3>
             </div>
-        </div>
-        <!-- Add Product Button -->
-        <div class="row">
-            <div class="col">
+            <div class="col-12">
                 <form id="addProduct">
                     <div class="form-group">
                         <label for="productName">Product Name</label>
-                        <input type="text" name="productName" class="form-control validationField" id="productName" data-validation="required,min:10">
+                        <input type="text" name="productName" class="form-control validationField" id="productName" data-validation="required">
                     </div>
                     <div class="form-group">
                         <label for="productPrice">Product Price</label>
