--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
                         </div>
                         <div class="form-group">
                             <label for="Email">Email</label>
-                            <input type="email" name="email" id="rEmail" class="form-control validationField" data-validation="required,unique">
+                            <input type="email" name="email" id="rEmail" class="form-control validationField" data-validation="required,unique,email">
                         </div>
                         <div class="form-group">
                             <label for="Password">Password</label>
-                            <input type="password" name="password" id="rPassword" class="form-control validationField" autocomplete="new-password" data-validation="required,min:5,max:20">
+                            <input type="password" name="password" id="rPassword" class="form-control validationField" autocomplete="new-password" data-validation="required,min:5,max:20,match:rConfirmPassword">
                         </div>
                         <div class="form-group">
                             <label for="ConfirmPassword">Confirm Password</label>
